:sparkles: Adds timetable project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     var OneSignal = window.OneSignal || [];
     OneSignal.push(["init", {
       appId: "857a17b6-40b4-4e9b-ac71-7d8f1264edce",
-      autoRegister: true,
+      autoRegister: false,
       notifyButton: {
         enable: false
       },
