:sparkles: Adds unsubscribe button

--- a/timetable/about/index.html
+++ b/timetable/about/index.html
@@ -71,13 +71,14 @@
         </blockquote>
         <p>Для этого достаточно нажать на значок замочка <i class="em em-lock"></i>
            в браузере возле адреса сайта и запретить там отправку уведомлений.
+           Также на главной странице присутствует кнопка <i>Выключить</i>.
         </p>
 
         <blockquote>
           <p><em>Возможно ли изменить выбранный класс?</p></em>
         </blockquote>
         <p><b>Да</b>, достаточно лишь заново заполнить форму и нажать кнопку
-           <i>Подписаться</i>.
+           <i>Включить</i>.
         </p>
 
         <blockquote>
