--- a/timetable/index.html
+++ b/timetable/index.html
@@ -55,6 +55,14 @@
         document.getElementById("enable").value='Готово!'
       }
     </script>
+
+    <script>
+      function unsubscribe() {
+        OneSignal.push(["setSubscription", false]);
+
+        document.getElementById("disable").value='Готово!'
+      }
+    </script>
 </head>
 
 <body>
@@ -115,7 +123,11 @@
 
             <input class="button-primary"
             type="submit" value="включить"
-            id="enable" onclick="subscribe(); return false;"/>
+            id="enable" onclick="subscribe(); return false;" />
+
+            <input class="button button-clear"
+            type="submit" id="disable" value="выключить"
+            onclick="unsubscribe(); return false;" />
 
           </fieldset>
         </form>
