:sparkles: Adds Safari support

--- a/timetable/index.html
+++ b/timetable/index.html
@@ -28,6 +28,7 @@
       OneSignal.push(["init", {
         appId: "857a17b6-40b4-4e9b-ac71-7d8f1264edce",
         autoRegister: false,
+        safari_web_id: "web.onesignal.auto.4924b4f0-134c-425c-876d-dc71d8371c02",
         notifyButton: {
           enable: false
         },
