:tada: Some swag

--- a/timetable/index.html
+++ b/timetable/index.html
@@ -20,6 +20,9 @@
     <!-- Milligram Framework -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.1.0/milligram.min.css" />
 
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="manifest" href="/manifest.json">
     <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
 
@@ -77,8 +80,6 @@
           уведомлений.
         </p>
 
-        <br />
-
         <div class="wrapper" align="center">
           <button class="button button-outline" id="about">
             О проекте
@@ -97,7 +98,6 @@
 
         <form>
           <fieldset>
-            <p id="setup_hint"></p>
 
             <label for="class">Выбери класс...</label>
             <select id="class">
@@ -132,6 +132,10 @@
 
           </fieldset>
         </form>
+
+        <p align="center"><i class="material-icons">code</i> by
+           <a href="https://github.com/MoarCatz">MoarCatz
+        </p>
       </div>
     </div>
 </body>
