:sparkles: Adds opengraph data

--- a/timetable/beta/index.html
+++ b/timetable/beta/index.html
@@ -9,6 +9,13 @@
     <link rel="shortcut icon"
     href="https://cdn0.iconfinder.com/data/icons/ikooni-outline-free-basic/128/free-20-16.png"
     type="image/x-icon" />
+
+    <meta property="og:site_name" content="Timetable Beta" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Timetable Beta" />
+    <meta property="og:description" content="Бета-тестирование." />
+    <meta property="og:url" content="https://moarcatz.github.io/timetable/beta/" />
+
     <title>Timetable Beta</title>
 
     <!-- Google Fonts -->
