--- a/timetable/about/index.html
+++ b/timetable/about/index.html
@@ -9,6 +9,13 @@
     <link rel="shortcut icon"
     href="https://cdn0.iconfinder.com/data/icons/ikooni-outline-free-basic/128/free-20-16.png"
     type="image/x-icon" />
+
+    <meta property="og:site_name" content="Timetable" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="About Timetable" />
+    <meta property="og:description" content="О проекте." />
+    <meta property="og:url" content="https://moarcatz.github.io/timetable/about/" />
+
     <title>Timetable</title>
 
     <!-- Google Fonts -->
