:lipstick: Updates test template

--- a/timetable/test/index.html
+++ b/timetable/test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html">
+<meta http-equiv="Content-Type" content="text/html" charset="windows-1251">
 <meta name="robots" content="noindex">
 <title>Изменения в расписании | СУНЦ УрФУ</title>
 <style>
@@ -13,37 +13,24 @@
 </head>
 
 <body>
-<h1>ИЗМЕНЕНИЯ В РАСПИСАНИИ НА СУББОТУ, 17 СЕНТЯБРЯ</h1>
-<h2>8А</h2>
-<p>1 урок&nbsp;&mdash; физика в 307</p>
-<p>2 урок&nbsp;&mdash; литература в 301</p>
-<p>3-4 уроки&nbsp;&mdash; экономика в 305</p>
-<h2>8С</h2>
-<p>1 урок&nbsp;&mdash; информатика в 102</p>
-<p>2 урок&nbsp;&mdash; русский язык в 122</p>
-<p>3-4 уроки&nbsp;&mdash; физкультура в 210</p>
-<h2>9Е</h2>
-<p>1 урок&nbsp;&mdash; физика в 307</p>
-<p>2 урок&nbsp;&mdash; география в 127</p>
-<p>3-4 уроки&nbsp;&mdash; физкультура в 210</p>
+<h1>ИЗМЕНЕНИЯ В РАСПИСАНИИ НА ПОНЕДЕЛЬНИК, 7 НОЯБРЯ</h1>
+<h2>9А</h2>
+<p>1 урок&nbsp;&mdash; химия</p>
+<p>2 урок&nbsp;&mdash; литература</p>
+<p>6 урок&nbsp;&mdash; зар.литература в 303</p>
+<p>7 урока&nbsp;&mdash; нет</p>
+<h2>10Г</h2>
+<p>2 урока&nbsp;&mdash; нет</p>
+<h2>10Д</h2>
+<p>2 урок&nbsp;&mdash; физика в 201</p>
 <h2>10Е</h2>
-<p>1 урок&nbsp;&mdash; математика в 307</p>
-<p>2 урок&nbsp;&mdash; русский в 127</p>
-<p>3-4 уроки&nbsp;&mdash; информатика в 210</p>
+<p>1, 2, 3, 4 уроки&nbsp;&mdash; математика у всего класса</p>
+<p>5, 6 уроки&nbsp;&mdash; обществознание</p>
+<p>7 урока&nbsp;&mdash; нет</p>
+<h2>10Б</h2>
+<p>1, 2, 3, 4 уроки&nbsp;&mdash; математика у всего класса</p>
+<p>5, 6 уроки&nbsp;&mdash; обществознание</p>
+<p>7 урока&nbsp;&mdash; нет</p>
 <h2>11Е</h2>
-<p>1 урок&nbsp;&mdash; ОБЖ в 307</p>
-<p>2 урок&nbsp;&mdash; экономика в 127</p>
-<p>3-4 уроки&nbsp;&mdash; литература в 210</p>
-<h2>11К</h2>
-<p>1 урок&nbsp;&mdash; физика в 307</p>
-<p>2 урок&nbsp;&mdash; география в 127</p>
-<p>3-4 уроки&nbsp;&mdash; физкультура в 210</p>
-<h2>11М</h2>
-<p>1 урок&nbsp;&mdash; математика в 307</p>
-<p>2 урок&nbsp;&mdash; русский в 127</p>
-<p>3-4 уроки&nbsp;&mdash; информатика в 210</p>
-<h2>11С</h2>
-<p>1 урок&nbsp;&mdash; ОБЖ в 307</p>
-<p>2 урок&nbsp;&mdash; экономика в 127</p>
-<p>3-4 уроки&nbsp;&mdash; литература в 210</p>
+<p>3, 4 уроки&nbsp;&mdash; зар.литература в 105</p>
 </body></html>
