:sparkles: Adds a new question to the help section

--- a/timetable/about/index.html
+++ b/timetable/about/index.html
@@ -68,7 +68,7 @@
         <blockquote>
           <p><em>Получу ли я уведомления после закрытия страницы?</em></p>
         </blockquote>
-        <p><b>Да!</b>. Сообщение придёт даже в том случае, если компьютер или
+        <p><b>Да!</b> Сообщение придёт даже в том случае, если компьютер или
            телефон были отключены. Они отобразятся при первом соединении с
            интернетом <i class="em em-sparkles"></i>.
         </p>
@@ -87,6 +87,13 @@
         <p><b>Да</b>, достаточно лишь заново заполнить форму и нажать кнопку
            <i>Включить</i>.
         </p>
+
+	<blockquote>
+          <p><em>Почему на моем устройстве недоступна кнопка <b>Включить</b>?</p></em>
+        </blockquote>
+        <p>К сожалению, некоторые устройства не поддерживают веб-уведомления.
+	   В их число входят устройства на iOS старее 10.
+	</p>
 
         <blockquote>
           <p><em>Как это работает?</p></em>
