:bug: Adds the "H" letter to the choices

--- a/timetable/index.html
+++ b/timetable/index.html
@@ -139,6 +139,7 @@
               <option value="Л">Л</option>
               <option value="С">С</option>
               <option value="М">М</option>
+              <option value="Н">Н</option>
             </select>
 
             <input class="button-primary"
